--- a/vue-project/src/assets/main.css
+++ b/vue-project/src/assets/main.css
@@ -33,3 +33,23 @@ a,
     padding: 0 2rem;
   }
 }
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #9dff00;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
